# cloud-infra

./: .envrc  pyproject.toml
.devcontainer/: .plugin-versions  Dockerfile  devcontainer.json  install.sh
.devcontainer/files/: aws-config  starship.toml
aws/bootstrap-pulumi/: Pulumi.yaml  __main__.py
aws/identity-center/: .envrc  Pulumi.primary.yaml  Pulumi.yaml  __main__.py
